--- a/DatasetAppendRow.csproj
+++ b/DatasetAppendRow.csproj
@@ -61,27 +61,52 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <CodeAnalysisLogFile>..\..\..\Bin\Plugins\LocationTo\SuperMap.Desktop.DatasetAppendRow.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
+    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
+    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSetDirectories>;D:\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
+    <CodeAnalysisRuleDirectories>;D:\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <CodeAnalysisLogFile>..\..\..\Bin\Plugins\LocationTo\SuperMap.Desktop.DatasetAppendRow.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
+    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
+    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSetDirectories>;D:\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
+    <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
+    <CodeAnalysisRuleDirectories>;D:\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
+    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
+    <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SuperMap.Data, Version=6.0.0.0, Culture=neutral, PublicKeyToken=0635c574ea890381, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\SuperMap\SuperMap iDesktop 9D\Bin\SuperMap.Data.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="SuperMap.Data">
+      <HintPath>E:\Supermap\iDesktop\10.0.0-39781\Bin\SuperMap.Data.dll</HintPath>
     </Reference>
-    <Reference Include="SuperMap.Desktop.Common">
-      <HintPath>..\..\..\..\..\..\Program Files\supermap\SuperMap iDesktop 9D\Bin\SuperMap.Desktop.Common.dll</HintPath>
+    <Reference Include="SuperMap.Desktop.Core">
+      <HintPath>E:\Supermap\iDesktop\10.0.0-39781\Bin\SuperMap.Desktop.Core.dll</HintPath>
     </Reference>
-    <Reference Include="SuperMap.Desktop.Core, Version=6.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\SuperMap\SuperMap iDesktop 9D\Bin\SuperMap.Desktop.Core.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="SuperMap.Desktop.UI.Controls">
+      <HintPath>E:\Supermap\iDesktop\10.0.0-39781\Bin\SuperMap.Desktop.UI.Controls.dll</HintPath>
     </Reference>
-    <Reference Include="SuperMap.Mapping, Version=6.0.0.0, Culture=neutral, PublicKeyToken=0635c574ea890381, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\SuperMap\SuperMap iDesktop 9D\Bin\SuperMap.Mapping.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="SuperMap.Mapping">
+      <HintPath>E:\Supermap\iDesktop\10.0.0-39781\Bin\SuperMap.Mapping.dll</HintPath>
     </Reference>
     <Reference Include="SuperMap.UI.Controls">
-      <HintPath>..\..\..\..\..\..\Program Files\supermap\SuperMap iDesktop 9D\Bin\SuperMap.UI.Controls.dll</HintPath>
+      <HintPath>E:\Supermap\iDesktop\10.0.0-39781\Bin\SuperMap.UI.Controls.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -135,6 +160,9 @@
       <DependentUpon>_frmDatasetAppendRow.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="lib\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
